# path_publisher

./: CMakeLists.txt  package.xml
launch/: path_publisher.launch
path/: 111.txt  222.txt  333.txt
rviz/: default.rviz
scripts/: path_publisher_client.py  path_publisher_service.py
