<?xml version="1.0"?>
<package format="2">
  <name>path_publisher</name>
  <version>0.0.0</version>
  <description>The path_publisher package</description>

  <maintainer email="you@example.com">Your Name</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_srvs</depend>

  <export>
  </export>
</package>
